--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href=".css">
 </head>
 <body>
-    <h1>Git y GitHub</h1>
+    <h1>Git y GitHub-</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta pariatur incidunt, 
     accusamus, velit nostrum explicabo animi vitae temporibus ducimus atque numquam molestiae, 
     harum ea dolorum vero quia reprehenderit nobis suscipit.</p>
